# EVMGuard

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  rule_request.yml
.github/workflows/: ci.yml  release.yml  sarif.yml
crates/evmguard/: Cargo.toml
crates/evmguard-analyzer/: Cargo.toml
crates/evmguard-analyzer/src/: batch.rs  config.rs  lib.rs  plugin.rs
crates/evmguard-cli/: Cargo.toml
crates/evmguard-cli/src/: main.rs
crates/evmguard-cli/tests/: anvil.rs  commands.rs
crates/evmguard-core/: Cargo.toml
crates/evmguard-core/src/: finding.rs  lib.rs  proxy.rs  trace.rs  transaction.rs
crates/evmguard-report/: Cargo.toml
crates/evmguard-report/src/: lib.rs
crates/evmguard-rpc/: Cargo.toml
crates/evmguard-rpc/src/: lib.rs
crates/evmguard/src/: main.rs
docs/: architecture.md  providers.md  roadmap.md  rules.md  usage.md
