[workspace]
members = [
    "crates/evmguard-analyzer",
    "crates/evmguard-cli",
    "crates/evmguard-core",
    "crates/evmguard-report",
    "crates/evmguard-rpc",
]
resolver = "2"

[workspace.package]
version = "1.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/zanzarini/EVMGuard"
rust-version = "1.82"
