[package]
name = "evmguard-analyzer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Static transaction inspection rules for EVMGuard."

[dependencies]
evmguard-core = { path = "../evmguard-core" }
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.11"
