[package]
name = "evmguard-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Open-source command-line tool to inspect EVM transactions for security risks before signing."
homepage = "https://github.com/zanzarini/EVMGuard"
documentation = "https://github.com/zanzarini/EVMGuard/blob/main/docs/usage.md"
readme = "../../README.md"
keywords = ["ethereum", "evm", "security", "web3", "blockchain"]
categories = ["command-line-utilities", "cryptography::cryptocurrencies"]

[[bin]]
name = "evmguard"
path = "src/main.rs"

[dependencies]
evmguard-analyzer = { path = "../evmguard-analyzer" }
evmguard-core = { path = "../evmguard-core" }
evmguard-report = { path = "../evmguard-report" }
evmguard-rpc = { path = "../evmguard-rpc" }

[dev-dependencies]
serde_json = "1.0.150"
