[package]
name = "evmguard-rpc"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "JSON-RPC transport and preflight operations for EVMGuard."

[dependencies]
evmguard-core = { path = "../evmguard-core" }
reqwest = { version = "0.12.28", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde_json = "1.0.150"
